organized folderss, added a class for constant values, cleaned my code a bit

--- a/Vaseis/Vaseis.csproj
+++ b/Vaseis/Vaseis.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UI\Components\" />
+    <Folder Include="UI\Pages\" />
+  </ItemGroup>
+
 </Project>
