--- a/Vaseis/Vaseis.csproj
+++ b/Vaseis/Vaseis.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="UI\Images\logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Bogus" Version="32.0.2" />
     <PackageReference Include="MaterialDesignThemes" Version="3.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
@@ -16,8 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UI\Components\" />
     <Folder Include="UI\Pages\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="UI\Images\logo.png" />
   </ItemGroup>
 
 </Project>
