--- a/Vaseis/Vaseis.csproj
+++ b/Vaseis/Vaseis.csproj
@@ -23,4 +23,9 @@
     <Resource Include="UI\Images\logo.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UI\Components\Employees\PersonalData\" />
+    <Folder Include="UI\Components\Profile\" />
+  </ItemGroup>
+
 </Project>
